vote-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-ui
  namespace: vote
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: vote-ui
  template:
    metadata:
      labels:
        app: vote-ui
    spec:
      containers:
      - image: docker.io/kartana/vote
        name: vote-ui
        ports:
        - containerPort: 80
