vote-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-ui
  namespace: vote
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: vote-ui
