vote-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  namespace: vote
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: "vote.smedjen.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-ui
                port:
                  number: 80
